# caelestia-cli

./: .gitignore  Cargo.toml  README.md  bldit.lua  default.nix  flake.nix  install.sh
.github/workflows/: release.yml
.superpowers/sdd/: task-3-report.md  task-4-report.md
completions/: caelestia.fish
docs/superpowers/plans/: 2026-07-10-remove-github-release-distribution.md  2026-07-10-rust-migration-phase1-scaffolding.md  2026-07-10-rust-migration-phase2-util-core.md  2026-07-12-complete-rust-port.md
docs/superpowers/specs/: 2026-07-10-cli-prebuilt-binaries.md  2026-07-10-rust-migration-design.md  2026-07-12-complete-rust-port-design.md
python-ref/src/caelestia/: __main__.py  parser.py
python-ref/src/caelestia/data/templates/: cava.conf  pandora.json  zed.json
python-ref/src/caelestia/subcommands/: record.py  search.py  shell.py  update.py
python-ref/src/caelestia/utils/: colourfulness.py  notify.py  scheme.py
python-ref/src/caelestia/utils/dots/: legacy.py  manifest.py  source.py  state.py
src/: cli.rs  main.rs
src/caelestia/subcommands/: install.py  update.py
src/caelestia/utils/: wallpaper.py
src/caelestia/utils/dots/: packages.py
src/core/: mod.rs  scheme.rs
src/core/material/: generator.rs  mod.rs  score.rs
src/ipc/: hypr.rs
src/subcommands/: clipboard.rs  emoji.rs  golden.rs  mod.rs  record.rs  resizer.rs  scheme.rs  screenshot.rs  search.rs  shell.rs  toggle.rs  wallpaper.rs
src/util/: io.rs  mod.rs  notify.rs  paths.rs
tests/: cli_surface.rs  delegation.rs  golden.rs  ipc_delegation.rs  ipc_forwarding.rs  scheme_preview.rs
(+14 files in other folders)
