[package]
name = "caelestia"
version = "1.0.0"
edition = "2021"
description = "Main control script for the Caelestia dotfiles (NixOS fork)"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "tiff", "webp"] }
indexmap = { version = "2", features = ["serde", "rayon"] }
ahash = { version = "0.8", default-features = false, features = ["runtime-rng", "std"] }
material-colors = { version = "0.4", default-features = false, features = ["std", "image", "serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
